[package]
edition = "2021"
name = "lpc81x-pac"
version = "0.2.1"
authors = ["lpc-rs Contributors"]
description = "Device support crates for LPC81X-PAC devices"
repository = "https://github.com/lpc-rs/lpc-pac"
readme = "README.md"
keywords = ["lpc", "svd2rust", "no_std", "embedded"]
categories = ["embedded", "no-std"]
license = "MIT/Apache-2.0"
[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
cortex-m = "0.7.4"
[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"
[package.metadata.docs.rs]
features = ['rt', 'lpc810', 'lpc811', 'lpc812']
default-target = "thumbv6m-none-eabi"
targets = []
[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]
lpc810 = []
lpc811 = []
lpc812 = []
